# langchain_playground

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  env.example  pyproject.toml
notebooks/: A_loader_model_id.ipynb  A_loader_openai.ipynb  A_loader_visualize_model_id.ipynb  A_loader_visualize_openai.ipynb
src/langchain_playground/: main.py  runnable_for_test.py
src/langchain_playground/chains/: A_introduction.py  B_retrieving.py  C_simple_invoke.py  D_simple_chain.py  F_query_translation.py  H_decomposition.py  I_stepback.py  J_HyDE.py  L_semantic_routing.py  M_query_routing.py  N_multirepresentation_indexing.py
src/langchain_playground/sample_chains/: E_simple_chain_tracer.py  G_RAGfusion.py  K_routing.py  O_CSVImport_L4-QnA.py
src/sp_rag/: settings.py
