[project]
name = "langchain-playground"
version = "0.1.0"
description = "Test, study, and experimentation with LangChain and LangGraph."
authors = [
    {name = "miche1696",email = "makalele96@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=0.3.26,<0.4.0)",
    "langgraph (>=0.5.2,<0.6.0)",
    "openai (>=1.95.1,<2.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.27,<0.4.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "chromadb (>=1.0.15,<2.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pytube (>=15.0.0,<16.0.0)",
    "langchain-chroma (>=0.2.4,<0.3.0)",
    "docarray (>=0.41.0,<0.42.0)",
    "rich (>=14.0.0,<15.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "plotly-express (>=0.4.1,<0.5.0)",
    "langchain-huggingface (>=0.3.0,<0.4.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "transformers (>=4.53.2,<5.0.0)",
    "torch (>=2.0.0,<3.0.0)",
    "unstructured[all-docs] (>=0.18.9,<0.19.0)",
    "pdfminer-six (>=20250506,<20250507)",
    "tqdm (>=4.67.1,<5.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pypdf (>=5.8.0,<6.0.0)",
    "pi-heif (>=1.0.0,<2.0.0)",
    "sentence-transformers (>=2.2.2,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "qdrant-client (>=1.14.3,<2.0.0)",
    "langchain-qdrant (>=0.2.0,<0.3.0)",
    "fastembed (>=0.7.1,<0.8.0)",
    "arxiv (>=2.2.0,<3.0.0)",
    "pymupdf (>=1.26.3,<2.0.0)"
]

[tool.poetry]
packages = [{include = "langchain_playground", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"
pre-commit = "^4.2.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
